# veda-prowatch

./: LICENSE  README.md  build.sh
prowatch-client/: Cargo.toml  Pro-Watch API REST.postman_collection.json  README.md
prowatch-client/docs/: AlarmsApi.md  AreasApi.md  AssetsApi.md  BadgeFieldsApi.md  BadgingApi.md  ChannelsApi.md  ClearcodesApi.md  CompaniesApi.md  ConfigurationApi.md  EventsApi.md  LogdevsApi.md  Model201.md  PanelsApi.md  SitesApi.md  SubpanelsApi.md  TimezonesApi.md  UsersApi.md  WorkstationsApi.md
prowatch-client/src/: lib.rs
prowatch-client/src/apis/: alarms_api.rs  areas_api.rs  assets_api.rs  badge_fields_api.rs  badging_api.rs  channels_api.rs  clearcodes_api.rs  client.rs  companies_api.rs  configuration.rs  configuration_api.rs  events_api.rs  logdevs_api.rs  mod.rs  panels_api.rs  sites_api.rs  subpanels_api.rs  timezones_api.rs  users_api.rs  workstations_api.rs
prowatch-client/src/models/: anytype.rs  array.rs  mod.rs  model_201.rs
veda-prowatch/: Cargo.toml
veda-prowatch/doc/: block_request.txt  prowatch_all.txt  pw_pass_request.txt  test_data_block.ttl
veda-prowatch/src/: common.rs  from_prowatch.rs  lock.rs  main.rs  to_prowatch.rs
veda-winpak/: Cargo.toml
veda-winpak/src/: common_winpak.rs  delete_from_winpak.rs  from_winpak.rs  insert_to_winpak.rs  main.rs  update_to_winpak.rs
