[package]
name = "veda-prowatch"
version = "0.1.0"
authors = ["Itiua <ValeriyBushenev@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
serde_json = "^1.0"
chrono = "0.4"
time = "0.1.42"
voca_rs = "1.8.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
base64 = "0.13.0"
url = "2.2.0"
jsonpath = "0.1.1"
array_tool = "1.0.3"

v_queue = "=0.1.9"
v_common = { package = "v-common", version = "=0.1.64" }

prowatch_client = { path = "../prowatch-client" }
